syntax = "proto3";

package techcubing;

option java_package = "org.cubingusa.techcubing.proto.services";
option java_outer_classname = "ListPersonsProto";

import "src/main/java/org/cubingusa/techcubing/proto/request_context.proto";
import "src/main/java/org/cubingusa/techcubing/proto/response_context.proto";
import "src/main/java/org/cubingusa/techcubing/proto/wcif/person.proto";

message ListPersonsRequest {
  RequestContext context = 1;
}

message ListPersonsResponse {
  ResponseContext context = 1;

  repeated wcif.WcifPerson persons = 2;
}
