syntax = "proto3";

package techcubing;

option java_package = "org.cubingusa.techcubing.proto.services";
option java_outer_classname = "TechCubingServiceProto";

import "src/main/java/org/cubingusa/techcubing/proto/services/acquire_scorecard.proto";
import "src/main/java/org/cubingusa/techcubing/proto/services/get_by_id.proto";
import "src/main/java/org/cubingusa/techcubing/proto/services/list_persons.proto";
import "src/main/java/org/cubingusa/techcubing/proto/services/release_scorecard.proto";

service TechCubingService {
  rpc ListPersons (ListPersonsRequest) returns (ListPersonsResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc AcquireScorecard (AcquireScorecardRequest) returns (AcquireScorecardResponse);
  rpc ReleaseScorecard (ReleaseScorecardRequest) returns (ReleaseScorecardResponse);
}
